// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> renders correct with close button and customClasses 1`] = `
<div
  className="test-overlay overlay"
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  <Popup
    additionalClass="test-modal modal"
  >
    <Icon
      className="test-close close"
      icon={[Function]}
      size={8}
    />
    Test modal content
  </Popup>
</div>
`;

exports[`<Modal /> renders correct without close button and customClasses 1`] = `
<div
  className="overlay"
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  <Popup
    additionalClass="modal"
  >
    Test modal content
  </Popup>
</div>
`;
